# CrustEngine

./: .gitignore  .gitmodules  Makefile  README.md  mesh.txt  mesh45deg.txt
Code/Src/: main.cpp  test.cpp
Code/Tests/: test.cpp
Commercial/Logo/: logo.xcf
Commercial/Show/: RotationError-05-05-2023.mov
CrustDoc/: DoxygenOptions
CrustDoc/html/: _camera_8hpp.html  _camera_8hpp.js  _camera_8hpp_source.html  _core_8hpp.html  _core_8hpp.js  _core_8hpp_source.html  _crust_script_8hpp.html  _crust_script_8hpp.js  _crust_script_8hpp_source.html  _directional_light_8hpp.html  _directional_light_8hpp.js  _directional_light_8hpp_source.html  _file_reader_8hpp.html  _file_reader_8hpp.js  _file_reader_8hpp_source.html  _input_event_8hpp.html  _input_event_8hpp.js  _input_event_8hpp_source.html  _light_source_8hpp.html  _light_source_8hpp_source.html  _logger_8hpp.html  _logger_8hpp_source.html  _loop_move_8hpp.html  _loop_move_8hpp.js  _loop_move_8hpp_source.html  _math_8hpp.html  _math_8hpp.js  _math_8hpp_source.html  _matrix_8hpp.html  _matrix_8hpp_source.html  _matrix_tests_8hpp.html  _matrix_tests_8hpp.js  _matrix_tests_8hpp_source.html  _mesh_8hpp.html  _mesh_8hpp.js  _mesh_8hpp_source.html  _mesh_loader_8hpp.html  _mesh_loader_8hpp_source.html  _mover_8hpp.js  _object_8hpp.html  (+719 more)
CrustDoc/latex/: _camera_8hpp.tex  _camera_8hpp_source.tex  _core_8hpp.tex  _core_8hpp_source.tex  _crust_script_8hpp.tex  _crust_script_8hpp_source.tex  _directional_light_8hpp.tex  _directional_light_8hpp_source.tex  _exceptions_handler_8hpp.tex  _file_reader_8hpp.tex  _file_reader_8hpp_source.tex  _input_event_8hpp.tex  _input_event_8hpp_source.tex  _input_handler_8hpp_source.tex  _light_source_8hpp.tex  _light_source_8hpp_source.tex  _logger_8hpp.tex  _logger_8hpp_source.tex  _loop_move_8hpp.tex  _loop_move_8hpp_source.tex  _math_8hpp.tex  _math_8hpp_source.tex  _matrix_8hpp.tex  _matrix_8hpp_source.tex  _matrix_tests_8hpp.tex  _matrix_tests_8hpp_source.tex  _mesh_8hpp.tex  _mesh_8hpp_source.tex  _mesh_loader_8hpp.tex  _mesh_loader_8hpp_source.tex  _mover_8hpp.tex  _object_8hpp.tex  _object_8hpp_source.tex  _polygon_8hpp.tex  _render_object_8hpp.tex  _render_object_8hpp_source.tex  _render_window_8hpp.tex  _render_window_8hpp_source.tex  _renderer_8hpp.tex  _renderer_8hpp_source.tex  (+305 more)
CrustEngine/: CMakeLists.txt  Desktop  Makefile  SDL_KeyMapping_toktorechce.txt  main.cpp
CrustEngine/Src/: main.cpp
CrustEngine/Tests/: test.cpp
CrustEngine/Tmp/: ProjectorWithStaticVariables.hpp
CrustTestingFramework/: CrustTesting.hpp
Inc/: Core.hpp  RendererWrapper.hpp  SDLWrapper.hpp  Scene.hpp
Inc/Core/: Camera.hpp  Core.hpp  Logger.hpp  Scene.hpp
Inc/Physics/: Matrix.hpp  Vector3.hpp
Inc/Rendering/: Object.hpp  RenderObject.hpp  RenderWindow.hpp  Renderer.hpp  RendererWrapper.hpp
Src/: main.cpp
docs/: CNAME  CrustEngine.drawio  DoxygenOptions  _camera_8hpp.html  _camera_8hpp.js  _camera_8hpp_source.html  _core_8hpp.html  _core_8hpp_source.html  _crust_script_8hpp.html  _crust_script_8hpp_source.html  _directional_light_8hpp.html  _directional_light_8hpp_source.html  _exceptions_handler_8hpp.html  _exceptions_handler_8hpp.js  _exceptions_handler_8hpp_source.html  _input_event_8hpp.html  _input_event_8hpp_source.html  _input_handler_8hpp.html  _input_handler_8hpp.js  _input_handler_8hpp_source.html  _light_source_8hpp.html  _light_source_8hpp.js  _light_source_8hpp_source.html  _logger_8hpp.html  _logger_8hpp_source.html  _loop_move_8hpp.html  _loop_move_8hpp_source.html  _math_8hpp.html  _math_8hpp_source.html  _matrix_8hpp.html  _matrix_8hpp.js  _matrix_8hpp_source.html  _mesh_8hpp.html  _mesh_8hpp_source.html  _mesh_loader_8hpp.html  _mesh_loader_8hpp_source.html  _mover_8hpp.html  _mover_8hpp.js  _mover_8hpp_source.html  _object_8hpp.html  (+224 more)
docs/html/: _core_8hpp.html  _directional_light_8hpp_source.html  _exceptions_handler_8hpp.html  _loop_move_8hpp.html  _mesh_8hpp_source.html  _mesh_loader_8hpp.js  _mover_8hpp.html  _object_8hpp.html  _polygon_8hpp.html  _polygon_8hpp_source.html  _render_object_8hpp_source.html  _s_d_l_8h.html  _s_d_l_8h_source.html  _s_d_l__assert_8h.html  _s_d_l__assert_8h_source.html  _s_d_l__atomic_8h.html  _s_d_l__audio_8h_source.html  _s_d_l__bits_8h.html  _s_d_l__blendmode_8h.html  _s_d_l__clipboard_8h.html  (+190 more)
engine/: CMakeLists.txt  README.md  main.cpp
engine/Inc/Files/: MeshLoader.hpp
engine/Inc/Logging/: ObjectLogger.hpp
engine/Inc/Math/: Math.hpp  Matrix.hpp  Triangle.hpp
engine/Inc/Objects/: Object.hpp  RenderObject.hpp  Transform.hpp
engine/Inc/Objects/Lightining/: DirectionalLight.hpp  LightSource.hpp
engine/Inc/Rendering/: Mesh.hpp  RenderWindow.hpp  Renderer.hpp  RendererWrapper.hpp
engine/Inc/Scripting/SampleScripts/: Rotator.hpp
engine/Src/: main.cpp
engine/Tmp/OLDInc/Core/: Scene.hpp
engine/Tmp/OLDInc/Input/: InputEvent.hpp
engine/Tmp/OLDInc/Math/: Vector3.hpp  Vector4.hpp
engine/Tmp/OLDInc/Objects/: Object.hpp
engine/inc/: CrustEngine.h
engine/inc/core/: Core.h  Scene.h  Window.h
engine/inc/files/: MeshLoader.h
engine/inc/logging/: ExceptionsHandler.h  Logger.h
engine/inc/math/: Math.h  Matrix.h  Vector3.h  Vector4.h
engine/inc/math/geometry/: Polygon.h  Triangle.h
engine/inc/objects/: Camera.h  LightSource.h  Mesh.h  Object.h  RenderObject.h  Transform.h
engine/inc/rendering/: Library2DWrapper.h  Projector.h  Renderer.h
engine/inc/rendering/projection/: AbstractProjector.h  PerspectiveProjector.h
engine/inc/scripting/: Script.h
engine/inc/static/: Config.h  Definitions.h
engine/inc/utils/: TimeProvider.h
engine/src/core/: Core.cpp  Scene.cpp  Window.cpp
engine/src/files/: MeshLoader.cpp
engine/src/logging/: ExceptionsHandler.cpp  Logger.cpp
engine/src/math/: Math.cpp
engine/src/math/geometry/: Polygon.cpp  Triangle.cpp
engine/src/objects/: Camera.cpp  LightSource.cpp  Mesh.cpp  Object.cpp  RenderObject.cpp  Transform.cpp
engine/src/rendering/: Library2DWrapper.cpp  Projector.cpp  Renderer.cpp
engine/src/rendering/projection/: PerspectiveProjector.cpp
engine/src/utils/: TimeProvider.cpp
(+891 files in other folders)
